http-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebapp
  namespace: myapp-prod
spec:
  selector:
    matchLabels:
      run: mywebapp
  replicas: 1
  template:
    metadata:
      labels:
        run: mywebapp
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
          - containerPort: 8080
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              name: nginx-config
            - mountPath: /usr/var/nginx/html/keys
              name: api-key
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-http-config
            items:
            - key: config
              path: nginx.conf
        - name: api-key
          secret:
            secretName: myapp-api-key
