mysql-deployment.yaml
#kubectl create secret generic mysql-secret --from-literal=password=rootpassword
#kubectl create secret generic mysql-secret  --from-literal=username=root --from-literal=password=rootpassword --from-literal=database=my_database
#mysql -h 127.0.0.1 -P 3306 -u root -p
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:8.0
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
