nginxpod.yaml
#kubectl create configmap nginxconfig --from-literal=nginxgreeting="hello from nginx"
#kubectl exec nginx -- printenv
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.25.2
