oreilly-pod.yaml
#kubectl create configmap configfile --from-file=example.cfg
#kubectl exec -ti oreilly -- ls -l oreilly
#kubectl exec -ti oreilly -- cat oreilly/example.cfg
apiVersion: v1
kind: Pod
metadata:
  name: oreilly
spec:
  containers:
  - image: busybox:1.36
    command:
      - sleep
      - "3600"
    volumeMounts:
    - mountPath: /oreilly
      name: oreilly
    name: busybox
  volumes:
  - name: oreilly
    configMap:
      name: configfile
