ppconsumer.yaml
#Use a local volume of type secret.
#echo -n "open sesame" > ./passphrase
#kubectl create secret generic pp --from-file=./passphrase
#kubectl describe secrets/pp
#kubectl apply -f ppconsumer.yaml
#kubectl logs ppconsumer
#kubectl exec ppconsumer -- cat /tmp/access/passphrase or kubectl exec ppconsumer -i -t -- sh (cat /tmp/access/passphrase)
apiVersion: v1
kind: Pod
metadata:
  name: ppconsumer
spec:
  containers:
  - name: shell
    image: busybox:1.36
    command:
      - "sh"
      - "-c"
      - "mount | grep access  && sleep 3600"
    volumeMounts:
      - name: passphrase
        mountPath: "/tmp/access"
        readOnly: true
  volumes:
  - name: passphrase
    secret:
      secretName: pp
