sec-pod.yaml
#kubectl create namespace sec
#kubectl create serviceaccount myappsa -n sec
#kubectl exec myapp -n sec -- cat /var/run/secrets/kubernetes.io/serviceaccount/token
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  namespace: sec
spec:
  serviceAccountName: myappsa
  containers:
  - name: main
    image: busybox:1.36
    command:
      - "bin/sh"
      - "-c"
      - "sleep 10000"
