startup-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: startup-nginx
spec:
  containers:
  - name: startup
    image: nginx:1.25.2
    volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: webservercontent
    startupProbe:
      httpGet:
        path: /
        port: 80
      failureThreshold: 30
      periodSeconds: 10
  volumes:
      - name: webservercontent
        configMap:
          name: nginx-content
