kuard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
  labels:
    app: kuard   # <- Add this
spec:
  selector:
    app: kuard
  ports:
    - protocol: TCP
      port: 80        # External port
      targetPort: 8080 # Container port
  #type: NodePort
