simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
  labels:
    app: my-app   # <- Add this
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80        # External port
      targetPort: 8080 # Container port
  type: LoadBalancer # LoadBalancer | NodePort
