simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-node
spec:
  containers:
    - image: gcr.io/develop-459306/simple-node-amd64:blue
      name: simple-node
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
  imagePullSecrets:
        - name: gcr-json-key
---
apiVersion: v1
kind: Service
metadata:
  name: simple-node-service
  labels:
    app: simple-node  # <- Add this
spec:
  selector:
    app: simple-node
  ports:
    - protocol: TCP
      port: 80        # External port
      targetPort: 8080 # Container port
  type: LoadBalancer # LoadBalancer | NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-node-service
                port:
                  number: 80
